# jarvis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  phase_task.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  voice-persona.md
docs/adr/: 0001-record-architecture-decisions.md  0002-local-first-voice-stack.md  0003-drive-claude-code-via-headless-mode.md  0004-python-runtime-and-tooling.md  0005-tdd-and-quality-gates.md  0006-launchd-launchagent-service.md  0007-rebuild-brain-on-claude-agent-sdk.md
docs/phases/: README.md  phase-0-spike.md  phase-1-skeleton.md  phase-2-wakeword-streaming.md  phase-3-demo.md  phase-3-jarvis-feel.md  phase-4-daemon.md
scripts/: bench_brain.py  bench_latency.py  eval_persona.py  gen_wakeword_fixtures.py  permission-hook.sh  record_devset.py  soak_idle.py  soak_wakeword.py
src/jarvis/: __init__.py  __main__.py  audio.py  brain.py  chimes.py  cli.py  config.py  doctor.py  loop.py  permissions.py  persona.py  service.py  stt.py  tts.py  vad.py  wakeword.py
tests/: conftest.py  test_always_on.py  test_audio.py  test_barge_in.py  test_bench_brain.py  test_bench_cold_start.py  test_bench_latency.py  test_bench_ttfa.py  test_brain_extraction.py  test_brain_session.py  test_brain_streaming.py  test_chimes.py  test_cli.py  test_config.py  test_config_drives_runtime.py  test_doctor.py  test_loop.py  test_loop_streaming.py  test_permission_gate.py  test_persona_eval.py  test_playback_pipeline.py  test_record_devset.py  test_service_unit.py  test_soak_idle.py  test_soak_wakeword.py  test_speakable_stream.py  test_stt_accuracy.py  test_tts.py  test_vad.py  test_wakeword.py  test_warmup.py
tests/fixtures/claude/: reply_with_code_and_tools.json
tests/fixtures/persona/: replies.json
tests/fixtures/stt/: devset.json
tests/fixtures/wakeword/: README.md
