[project]
name = "jarvis"
version = "0.0.0"
description = "A local-first, voice-controlled Jarvis interface for Claude Code."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "All Rights Reserved" }
authors = [{ name = "Ty Quan" }]
keywords = ["claude-code", "voice-assistant", "speech-to-text", "text-to-speech", "jarvis"]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
]

[project.scripts]
jarvis = "jarvis.cli:app"

[project.optional-dependencies]
# The native voice stack (openWakeWord, Silero VAD, whisper.cpp bindings,
# Kokoro) is introduced phase-by-phase. Keeping it optional means the core
# package and test suite install fast and CI stays green before the heavy
# audio/ML wheels are wired in. See docs/phases/.
voice = []

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
# typer relies on decorators whose return type it does not fully annotate;
# relaxing this one rule keeps the rest of strict mode intact.
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "-ra -q --cov=jarvis --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["jarvis"]
omit = ["*/__main__.py"]
