[project]
name = "jarvis"
version = "0.0.0"
description = "A local-first, voice-controlled Jarvis interface for Claude Code."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "All Rights Reserved" }
authors = [{ name = "Ty Quan" }]
keywords = ["claude-code", "voice-assistant", "speech-to-text", "text-to-speech", "jarvis"]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "typer>=0.12",
]

[project.scripts]
jarvis = "jarvis.cli:app"

[project.optional-dependencies]
# The native voice stack. Kept as an optional extra so the core package and CI
# install fast (these pull torch via Kokoro); install with `uv sync --extra
# voice`. whisper.cpp itself is a system binary (brew install whisper-cpp), not
# a wheel. openWakeWord is wired in now though it is first used in Phase 2.
voice = [
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "openwakeword>=0.4.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
# typer relies on decorators whose return type it does not fully annotate;
# relaxing this one rule keeps the rest of strict mode intact.
disallow_untyped_decorators = false

# The native voice stack (the optional `voice` extra) ships no type stubs and is
# not installed in CI. Its imports live inside `# pragma: no cover` hardware
# shims; ignore the missing stubs there without relaxing strictness elsewhere.
[[tool.mypy.overrides]]
module = ["sounddevice", "numpy", "kokoro", "openwakeword", "openwakeword.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov=jarvis --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
# "scripts" is on the path so the throwaway Phase 0 bench (scripts/bench_brain.py)
# can be imported and unit-tested without packaging it.
pythonpath = ["src", "scripts"]

[tool.coverage.run]
branch = true
source = ["jarvis"]
omit = ["*/__main__.py"]
